registry/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: registry
        image: registry:2.8.2
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: registry-storage
          mountPath: /var/lib/registry
        - name: auth
          mountPath: /auth
        - name: config-volume
          mountPath: /etc/docker/registry
      volumes:
      - name: registry-storage
        persistentVolumeClaim:
          claimName: registry-longhorn
      - name: auth
        secret:
          secretName: registry-auth-secret
      - name: config-volume
        configMap:
          name: registry-config
