registry/server/ingress-api-local.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-api-local
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - registry-api
  defaultBackend:
    service:
      name: registry-api-service
      port:
        number: 5000
        

# depr TODO rework
