registry/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/preserve-host: "true"
  name: registry-api
  namespace: registry
spec:
  tls:
    - hosts:
        - registry-api.traunseenet.com
      secretName: letsencrypt-prod-api
  ingressClassName: traefik
  rules:
    - host: registry-api.traunseenet.com
      http:
        paths:
          - backend:
              service:
                name: registry-api-service
                port:
                  number: 5000
            path: /
            pathType: Prefix
